Fixed spacing issue on larger devices and set minimum sizes for elements on the donation page

--- a/src/components/Donate/DonatePage.css
+++ b/src/components/Donate/DonatePage.css
@@ -106,7 +106,7 @@
 .infoBox {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: clamp(320px, 50%, 700px);
   border-radius: 15px;
   text-align: center;
   padding: 20px;
@@ -118,11 +118,6 @@ box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 
-@media screen and (max-width: 960px) {
-  .infoBox {
-    width: 90%;
-  }
-}
 
 .hadith {
   border: solid gold 2px;
